stc/vcp/helm/rendered.yaml
---
# Source: consolportals-vcp/templates/a3gw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consolportals-sa-stc-vcp-a3gw-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: vcp-a3gw
  ports:
    - name: portals
      port: 8444
      targetPort: 8444
    - name: auth
      port: 8445
      targetPort: 8445
---
# Source: consolportals-vcp/templates/adminportal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consolportals-sa-stc-vcp-adminportal-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: vcp-adminportal
  ports:
    - port: 8080
      targetPort: 8080
---
# Source: consolportals-vcp/templates/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consolportals-sa-stc-vcp-httpd-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: vcp-httpd
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
---
# Source: consolportals-vcp/templates/a3gw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consolportals-sa-stc-vcp-a3gw-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      component: vcp-a3gw
  template:
    metadata:
      labels:
        component: vcp-a3gw
    spec:
      containers:
        - name: vcp-a3gw
          image: "mersin.telenity.com/com/telenity/consolportals-sa-stc-vcp-a3gw:1.0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8444
            - containerPort: 8445
---
# Source: consolportals-vcp/templates/adminportal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consolportals-sa-stc-vcp-adminportal-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      component: vcp-adminportal
  template:
    metadata:
      labels:
        component: vcp-adminportal
    spec:
      containers:
        - name: vcp-adminportal
          image: "mersin.telenity.com/com/telenity/consolportals-sa-stc-vcp-adminportal:1.0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
# Source: consolportals-vcp/templates/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consolportals-sa-stc-vcp-httpd-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      component: vcp-httpd
  template:
    metadata:
      labels:
        component: vcp-httpd
    spec:
      containers:
        - name: vcp-httpd
          image: "mersin.telenity.com/com/telenity/consolportals-sa-stc-vcp-httpd:1.0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 443
---
# Source: consolportals-vcp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consolportals-sa-stc-vcp-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    -http:
        paths:
          - pathType: Prefix
            path: "/adminportal"
            backend:
              service:
                name: consolportals-sa-stc-vcp-a3gw-service
                port:
                  number: 8444
          - pathType: Prefix
            path: "/ccportal"
            backend:
              service:
                name: consolportals-sa-stc-vcp-a3gw-service
                port:
                  number: 8444
          - pathType: Prefix
            path: "/partnerportal"
            backend:
              service:
                name: consolportals-sa-stc-vcp-a3gw-service
                port:
                  number: 8444
          - pathType: Prefix
            path: "/conf"
            backend:
              service:
                name: consolportals-sa-stc-vcp-a3gw-service
                port:
                  number: 8444
          - pathType: Prefix
            path: "/site.json"
            backend:
              service:
                name: consolportals-sa-stc-vcp-a3gw-service
                port:
                  number: 8444
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consolportals-sa-stc-vcp-ingress-refresh-token
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    -http:
        paths:
          - pathType: Prefix
            path: "/auth"
            backend:
              service:
                name: consolportals-sa-stc-vcp-a3gw-service
                port:
                  number: 8444
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consolportals-sa-stc-vcp-ingress-cmpf-rest
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    -http:
        paths:
          - pathType: Prefix
            path: "/cmpf-rest"
            backend:
              service:
                name: consolportals-sa-stc-vcp-a3gw-service
                port:
                  number: 8444
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consolportals-sa-stc-vcp-ingress-captcha
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    -http:
        paths:
          - pathType: Prefix
            path: "/captcha"
            backend:
              service:
                name: consolportals-sa-stc-vcp-a3gw-service
                port:
                  number: 8444
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consolportals-sa-stc-vcp-ingress-vcp-services
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    -http:
        paths:
          - pathType: Prefix
            path: "/vcp-services"
            backend:
              service:
                name: consolportals-sa-stc-vcp-a3gw-service
                port:
                  number: 8444
